# brewing-mcp

./: .gitignore  .pre-commit-config.yaml  CLEANUP_SUMMARY.md  Makefile  PLAN.md  README.md  SETUP_GUIDE.md  claude_desktop_config.json  config.example.json  debug_mcp.py  pyproject.toml  test_grocy_api.py  test_servers.py
docs/: CLEANUP_SUMMARY.md  CONFIG.md  GROCY_CURRENCY.md  INDEX.md  PRICE_CONVERSION.md
