[project]
name = "brewing-mcp"
version = "0.1.0"
description = "A modular MCP platform for brewing software integrations"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "John" }
]
keywords = ["mcp", "brewing", "beersmith", "grocy", "brewfather"]

# Note: No build-system for workspace root - individual packages define their own

# uv workspace configuration
[tool.uv.workspace]
members = [
    "packages/brewing-common",
    "packages/mcp-beersmith",
    "packages/mcp-grocy",
    "packages/mcp-brewfather",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["brewing_common", "mcp_beersmith", "mcp_grocy", "mcp_brewfather"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["rapidfuzz.*", "fastmcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
